# nu-discord-bot

./: Cargo.toml  Dockerfile  Procfile  README.md  flake.nix  fly.toml  project.toml  test_small.csv
src/: context.rs  eval.rs  main.rs  run_external.rs
src/discordview/: command.rs  mod.rs
