[package]
authors = ["Tanishq Kancharla <tklightningfast@gmail.com>"]
edition = "2018"
name = "nubot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
nu-ansi-term = {path = "../nushell/crates/nu-ansi-term"}
nu-cli = {path = "../nushell/crates/nu-cli", default-features = false}
nu-command = {path = "../nushell/crates/nu-command"}
nu-completion = {path = "../nushell/crates/nu-completion"}
nu-data = {path = "../nushell/crates/nu-data"}
nu-engine = {path = "../nushell/crates/nu-engine"}
nu-errors = {path = "../nushell/crates/nu-errors"}
nu-parser = {path = "../nushell/crates/nu-parser"}
nu-path = {path = "../nushell/crates/nu-path"}
nu-plugin = {path = "../nushell/crates/nu-plugin"}
nu-protocol = {path = "../nushell/crates/nu-protocol"}
nu-source = {path = "../nushell/crates/nu-source"}
nu-stream = {path = "../nushell/crates/nu-stream"}
nu-table = {path = "../nushell/crates/nu-table"}
nu-value-ext = {path = "../nushell/crates/nu-value-ext"}
serenity = "0.10"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread"]}

nu_plugin_binaryview = {path = "../nushell/crates/nu_plugin_binaryview", optional = true}
nu_plugin_chart = {path = "../nushell/crates/nu_plugin_chart", optional = true}
nu_plugin_from_bson = {path = "../nushell/crates/nu_plugin_from_bson", optional = true}
nu_plugin_from_sqlite = {path = "../nushell/crates/nu_plugin_from_sqlite", optional = true}
nu_plugin_inc = {path = "../nushell/crates/nu_plugin_inc", optional = true}
nu_plugin_match = {path = "../nushell/crates/nu_plugin_match", optional = true}
nu_plugin_query_json = {path = "../nushell/crates/nu_plugin_query_json", optional = true}
nu_plugin_s3 = {path = "../nushell/crates/nu_plugin_s3", optional = true}
nu_plugin_selector = {path = "../nushell/crates/nu_plugin_selector", optional = true}
nu_plugin_start = {path = "../nushell/crates/nu_plugin_start", optional = true}
nu_plugin_textview = {path = "../nushell/crates/nu_plugin_textview", optional = true}
nu_plugin_to_bson = {path = "../nushell/crates/nu_plugin_to_bson", optional = true}
nu_plugin_to_sqlite = {path = "../nushell/crates/nu_plugin_to_sqlite", optional = true}
nu_plugin_tree = {path = "../nushell/crates/nu_plugin_tree", optional = true}
nu_plugin_xpath = {path = "../nushell/crates/nu_plugin_xpath", optional = true}

[features]
default = [
  # "nu-cli/shadow-rs",
  # "sys",
  # "ps",
  # "ctrlc-support",
  # "which-support",
  # "term-support",
  # "rustyline-support",
  # "match",
  # "post",
  # "fetch",
  # "zip-support",
  # "dataframe",
]

#dataframe feature for nushell
dataframe = [
  "nu-engine/dataframe",
  "nu-protocol/dataframe",
  "nu-command/dataframe",
  "nu-value-ext/dataframe",
  "nu-data/dataframe",
  "nu_plugin_to_bson/dataframe",
]

fetch-support = ["nu-command/fetch", "nu-command/post"]
