[package]
authors = ["Tanishq Kancharla <tklightningfast@gmail.com>"]
edition = "2018"
name = "nushell-api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
nu = "0.64.0"
nu-cli = "0.64.0"
nu-command = "0.64.0"
nu-engine = "0.64.0"
nu-parser = "0.64.0"
nu-protocol = "0.64.0"
serenity = "0.11.2"
strip-ansi-escapes = "0.1.1"
tokio = "1.19.2"

[features]
default = []
